# libodb-release

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: odb.cmake
main/: CMakeLists.txt
main/pg_test/: CMakeLists.txt  db.hpp  db_traits.hpp  main.cpp  traits-pgsql.hpp
main/sqlite_test/: CMakeLists.txt  db.hpp  db_traits.hpp  main.cpp  traits-sqlite.hpp
odbtest/: CMakeLists.txt  db.xml  main.cpp
